tests/test_bool/good/test_bool.catala_en
## Article

```catala
declaration scope TestBool:
  context foo content boolean
  context bar content integer

scope TestBool:
  definition bar equals 1
  definition foo under condition bar >= 0 consequence equals true
  definition foo under condition bar < 0 consequence equals false
```
