tests/test_bool/bad/bad_assert.catala_en
## Test

```catala
declaration scope Foo:
  internal x content integer

scope Foo:
  definition x equals 0
  assertion x
```


```catala-test {id="Foo"}
catala Interpret -s Foo
```